--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
                             <li><a href="#">协议规则</a></li>
                             <li><a href="#">下载app</a></li>
                             <li><a href="#">智能生活</a></li>
-                            <li><a href="#">Select Location</a></a></li>
+                            <li><a href="#">Select Location</a></a>
+                            </li>
                         </ul>
 
                         <ul class="fright">
@@ -45,8 +46,7 @@
 
                             <div class="fleft car">
                                 <a href="#" class="car_link">
-                                    <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>购物车<span
-                                        class="car_num">(0)</span>
+                                    <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>购物车<span class="car_num">(0)</span>
                                 </a>
                                 <div class="car_cont">
                                     <div class="car_loading hide">
@@ -63,7 +63,9 @@
         </div>
         <div class="h_cont">
             <div class="contain">
-                <h1 class="fleft"><a href="index.html" class="xm_logo"></a></h1>
+                <h1 class="fleft">
+                    <a href="index.html" class="xm_logo"></a>
+                </h1>
 
 
                 <ul class="fleft hc_nav">
@@ -157,10 +159,18 @@
         <!-- swiper  -->
         <div class="swiper_wrapper">
             <ul class="swiper_list">
-                <li><a href="#" class="active"><img src="./img/1.webp.jpg" alt=""></a></li>
-                <li><a href="#"><img src="./img/2.webp.jpg" alt=""></a></li>
-                <li><a href="#"><img src="./img/287532b750a3a1c899789e702f338f9b.webp.jpg" alt=""></a></li>
-                <li><a href="#"><img src="./img/584add2c9cfdb9eefe7b642bf191773a.webp.jpg" alt=""></a></li>
+                <li>
+                    <a href="#" class="active"><img src="./img/1.webp.jpg" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/2.webp.jpg" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/287532b750a3a1c899789e702f338f9b.webp.jpg" alt=""></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/584add2c9cfdb9eefe7b642bf191773a.webp.jpg" alt=""></a>
+                </li>
             </ul>
             <p class="swiper_pagination">
                 <a href="#" class="on"></a>
@@ -1021,7 +1031,8 @@
                             <em class="iconfont-message2"></em> 人工客服
                         </a>
                         <div class="follow">
-                            关注小米：<a href="#" target="_blank"></a>
+                            关注小米：
+                            <a href="#" target="_blank"></a>
                             <img src="">
                         </div>
                     </div>
@@ -1042,14 +1053,10 @@
                         <a href="http://b.mi.com/?client_id=180100031058&amp;masid=17409.0358" target="_blank">政企服务</a>
                         <span class="sep">|</span>
                         <a href="http://xiaomi.tmall.com/" target="_blank">小米天猫店</a> <span class="sep">|</span>
-                        <a href="http://privacy.mi.com/all/zh_CN/" target="_blank">小米集团隐私政策</a> <span
-                            class="sep">|</span>
-                        <a href="http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/f516fe9e2c01.html"
-                            target="_blank">小米公司儿童信息保护规则</a><span class="sep">|</span>
-                        <a href="http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/ded8d0e4a77d.html"
-                            target="_blank">小米商城隐私政策</a><span class="sep">|</span>
-                        <a href="http://www.mi.com/about/user-agreement/" target="_blank">小米商城用户协议</a> <span
-                            class="sep">|</span>
+                        <a href="http://privacy.mi.com/all/zh_CN/" target="_blank">小米集团隐私政策</a> <span class="sep">|</span>
+                        <a href="http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/f516fe9e2c01.html" target="_blank">小米公司儿童信息保护规则</a><span class="sep">|</span>
+                        <a href="http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/ded8d0e4a77d.html" target="_blank">小米商城隐私政策</a><span class="sep">|</span>
+                        <a href="http://www.mi.com/about/user-agreement/" target="_blank">小米商城用户协议</a> <span class="sep">|</span>
                         <a href="http://static.mi.com/feedback/" target="_blank">问题反馈</a> <span class="sep">|</span>
                         <a href="javascript:void(0);">Select Location</a>
                     </p>
@@ -1062,8 +1069,7 @@
                         ©
                         <a href="javascript:;" target="_blank" title="mi.com">mi.com</a> 京ICP证110507号
                         <a href="http://beian.miit.gov.cn/" target="_blank">京ICP备10046444号</a>
-                        <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802020134"
-                            target="_blank">京公网安备11010802020134号</a>
+                        <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802020134" target="_blank">京公网安备11010802020134号</a>
                         <a href="http://www.mi.com/culture-license/" target="_blank">京网文[2020]0276-042号</a> <br>
                         <a href="http://www.mi.com/medical/record/" target="_blank">（京）网械平台备字（2018）第00005号</a>
                         <a href="http://www.mi.com/medical/qualification/" target="_blank">互联网药品信息服务资格证
@@ -1071,37 +1077,29 @@
                         <a href="http://www.mi.com/business-license/" target="_blank">营业执照</a>
                         <a href="http://www.mi.com/medical/list/" target="_blank">医疗器械质量公告</a>
                         <br>
-                        <a href="https:http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e0c7d4cf3b7cd88de10196e30c92e020.png"
-                            target="_blank">增值电信业务许可证</a>&nbsp;网络食品经营备案 京食药网食备202010048 &nbsp;
-                        <a href="https:http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/c6859168166651511897f54fa1047fe3.png"
-                            target="_blank">食品经营许可证</a> <br>违法和不良信息举报电话：171-5104-4404&nbsp;
-                        <a href="https:http://www.mi.com/intellectual"
-                            target="_blank">知识产权侵权投诉</a>&nbsp;本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
+                        <a href="https:http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e0c7d4cf3b7cd88de10196e30c92e020.png" target="_blank">增值电信业务许可证</a>&nbsp;网络食品经营备案 京食药网食备202010048 &nbsp;
+                        <a href="https:http://cdn.cnbj1.fds.api.mi-img.com/mi-mall/c6859168166651511897f54fa1047fe3.png" target="_blank">食品经营许可证</a> <br>违法和不良信息举报电话：171-5104-4404&nbsp;
+                        <a href="https:http://www.mi.com/intellectual" target="_blank">知识产权侵权投诉</a>&nbsp;本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
                     </p>
                 </div>
                 <div class="info-links">
-                    <a href="http://privacy.truste.com/privacy-seal/validation?rid=4fc28a8c-6822-4980-9c4b-9fdc69b94eb8&amp;lang=zh-cn"
-                        target="_blank">
+                    <a href="http://privacy.truste.com/privacy-seal/validation?rid=4fc28a8c-6822-4980-9c4b-9fdc69b94eb8&amp;lang=zh-cn" target="_blank">
                         <img src="http://i1.mifile.cn/f/i/17/site/truste.png" alt="TRUSTe Privacy Certification">
                     </a>
                     <a href="http://search.szfw.org/cert/l/CX20120926001783002010" target="_blank">
                         <img src="http://s01.mifile.cn/i/v-logo-2.png" alt="诚信网站">
                     </a>
-                    <a href="http://ss.knet.cn/verifyseal.dll?sn=e12033011010015771301369&amp;ct=df&amp;pa=461082"
-                        target="_blank"><img src="http://s01.mifile.cn/i/v-logo-1.png" alt="可信网站"></a>
+                    <a href="http://ss.knet.cn/verifyseal.dll?sn=e12033011010015771301369&amp;ct=df&amp;pa=461082" target="_blank"><img src="http://s01.mifile.cn/i/v-logo-1.png" alt="可信网站"></a>
                     <a href="http://www.mi.com/service/buy/commitment/" target="_blank">
-                        <img src="http://i8.mifile.cn/b2c-mimall-media/ba10428a4f9495ac310fd0b5e0cf8370.png"
-                            alt="诚信经营 放心消费">
+                        <img src="http://i8.mifile.cn/b2c-mimall-media/ba10428a4f9495ac310fd0b5e0cf8370.png" alt="诚信经营 放心消费">
                     </a>
                     <a href="http://webcert.cnmstl.net/cert/grade?sn=3af21034e35011eab3ea00163e068ceb">
-                        <img
-                            src="http://cnbj1.fds.api.xiaomi.com/b2c-misite-activity/f1ee261b96ae71e845efba398efeca02.png">
-                        <img
-                            src="http://cnbj1.fds.api.xiaomi.com/b2c-misite-activity/361999ff481f6a4529088fe5ed981b55.png">
+                        <img src="http://cnbj1.fds.api.xiaomi.com/b2c-misite-activity/f1ee261b96ae71e845efba398efeca02.png">
+                        <img src="http://cnbj1.fds.api.xiaomi.com/b2c-misite-activity/361999ff481f6a4529088fe5ed981b55.png">
                     </a>
                 </div>
             </div>
-            <div class="foot">探索黑科技，小米为发烧而生</div>
+            <div class="">探索黑科技，小米为发烧而生</div>
         </div>
     </div>
 </body>
